2004-05-07  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/menufactory.py: reordered some code, added function
	create_button()

2004-05-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/properties.py: added upper, lower, _get, _set and _set2
	to redefine.

2004-04-27  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/placementtool.py: use new PlacementTool from
	diacanvas (CVS).
	* gaphor/diagram/itemtool.py: New file. Handles items the *new* way.
	* gaphor/diagram/klass.py: Added isAbstract handling.
	* gaphor/diagram/itemactions.py: added action for isAbstract.
	* gaphor/diagram/association.py: small updates.
	* gaphor/diagram/diagramitem.py: emit action on the main window
	if a subject is (un)set.
	* gaphor/__init__.py: Now a new diagram is created on startup
	* gaphor/ui/mainactions.py: Open the "main" diagram when creating
	a new model.

2004-04-16  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/flow.py: New file, ControlFlow item.

2004-04-15  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* utils/install_mo.py: fixed bug that made the installation crash.
	* gaphor/diagram/elementitem.py: renamed modelelement.py to this file,
	  changed dependent files.
	* gaphor/diagram/nameditem.py: renamed classifier.py to this file,
	  changed dependent files.
	* gaphor/diagram/actions.py: added create actions for InitialNode,
	  ActivityFinalNode and Action.
	* gaphor/diagram/action.py: New file, representing an Action.
	* gaphor/diagram/node.py: New file, containing initial and final nodes.
	* gaphor/ui/mainwindow.py: added items for new node types.

2004-04-13  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	RELEASE 0.3.0

	* Several small changes

2004-03-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/attribute.py, operation.py: Added popup menu.
	* gaphor/ui/diagramactions.py: Added action ShowGrid. Made actions non
	sensitive when no diagram is shown