@@ -1,3 +1,9 @@
+2004-05-10  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/ui/wrapbox.py: new file. replaces the C GtkWrapBox library.
+	* gaphor/ui/stereotypewindow.py: new file. This dialog should be used
+	to add/edit stereotypes.
+
 2004-05-07  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* gaphor/ui/menufactory.py: reordered some code, added function
